// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`routing - 1. Constants should return constants 1`] = `
Object {
  "LOCATION_CHANGE": "@@router/LOCATION_CHANGE",
}
`;

exports[`routing - 2. Action Creators should return actions 1`] = `Object {}`;

exports[`routing - 4. Reducer should handle LOCATION_CHANGE 1`] = `
Object {
  "locationBeforeTransitions": Object {
    "pathname": "/",
  },
}
`;

exports[`routing - 4. Reducer should return the initial state 1`] = `
Object {
  "locationBeforeTransitions": null,
}
`;
